@@ -717,7 +717,8 @@ apr_status_t h2_stream_add_header(h2_stream *stream,
         }
     }
     
-    if (stream->request_headers_added > session->s->limit_req_fields) {
+    if (session->s->limit_req_fields > 0 
+        && stream->request_headers_added > session->s->limit_req_fields) {
         /* already over limit, count this attempt, but do not take it in */
         ++stream->request_headers_added;
     }
@@ -753,7 +754,8 @@ apr_status_t h2_stream_add_header(h2_stream *stream,
         goto cleanup;
     }
     
-    if (stream->request_headers_added > session->s->limit_req_fields) {
+    if (session->s->limit_req_fields > 0 
+        && stream->request_headers_added > session->s->limit_req_fields) {
         /* too many header lines */
         if (stream->request_headers_added > session->s->limit_req_fields + 100) {
             /* yeah, right, this request is way over the limit, say goodbye */
